Fix java warnings